# AudioObjectManager

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AudioObjectManager.sln  AudioObjectManager.vcxproj  AudioObjectManager.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  redo_example_main.vcxproj  redo_example_main.vcxproj.filters
AudioObjectManager.dir/Debug/: AudioObjectManager.exe.recipe  AudioObjectManager.ilk
AudioObjectManager.dir/Debug/AudioObj.914897D2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/: redo_example_main.cpp
include/: AudioObject.h  AudioObjectManager.h
redo_example_main.dir/Debug/: redo_example_main.exe.recipe  redo_example_main.ilk
redo_example_main.dir/Debug/redo_exa.040AD0E4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: AudioObject.cpp  AudioObjectManager.cpp  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
